<resources>
    <string name="app_name">MoviesApp</string>

    <string name="popular_title">Popular movies</string>
    <string name="top_title">Top rated movies</string>
    <string name="favorite_title">Favorite movies</string>

    <string name="user_rating">User rating</string>
    <string name="description">Description</string>
    <string name="release_date">Release date</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>

    <string name="error">An error occurs please try again later</string>
    <string name="loading">Loading</string>
    <string name="no_favorite">No favorite movies</string>
    <string name="no_trailers">No trailers for this movie</string>
    <string name="no_reviews">No reviews for this movie</string>
</resources>
